--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Tune Draft</string>
     <string name="billboard_hot_100">Billboard Hot 100</string>
-    <string name="tunes_remaining">Tunes Remaining:</string>
+    <string name="drafts_remaining">Drafts Remaining:</string>
     <string name="draft_tune_text">Draft</string>
     <string name="preference_file_key">com.cladcobra.tunedraft.PREFERENCE_FILE_KEY</string>
     <string name="drafts_remaining_key">drafts_remaining</string>
