--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="drafts_remaining_text">Drafts Remaining:</string>
     <string name="draft_tune_text">Draft</string>
 
-    <string name="inventory_text">Inventory</string>
+    <string name="squad_text">Squad</string>
 
     <string name="preference_file_key">com.cladcobra.tunedraft.PREFERENCE_FILE_KEY</string>
     <string name="drafts_remaining_key">drafts_remaining</string>
