--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="draft_tune_text">Draft</string>
 
     <string name="squad_text">Squad</string>
+    <string name="release_tune_text">Release</string>
 
     <string name="preference_file_key">com.cladcobra.tunedraft.PREFERENCE_FILE_KEY</string>
     <string name="drafts_remaining_key">drafts_remaining</string>
